# Covid-occupation-risk-plot

./: Procfile  README.md  requirements.txt
myapp/: main.py  pyproject.toml
myapp/data/: Taiwan_job_2020.xlsx
