[tool.poetry]
name = "covid-plot"
version = "0.1.0"
description = ""
authors = ["Richard <getrt1991@gmail.com>"]
readme = "README.md"
packages = [{include = "covid_plot"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
bokeh = "^3.0.3"
seaborn = "^0.12.2"
openpyxl = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
